# Raspberry-Pi-Projects

./: CMakeLists.txt  pico_sdk_import.cmake
FreeRTOS_proj/: CMakeLists.txt
FreeRTOS_proj/ProjectFiles/: CMakeLists.txt  main.c
FreeRTOS_proj/freertos/: CMakeLists.txt
Matrix/: CMakeLists.txt  main.c
MultiCoreSimple/: CMakeLists.txt  MultiCoreSimple.c
Mutexes/: CMakeLists.txt
Mutexes/FreeRTOS_Files/: CMakeLists.txt  FreeRTOSConfig.h
Mutexes/ProjectFiles/: CMakeLists.txt  main.c
PWM_Light/: CMakeLists.txt  main.c
blink/: CMakeLists.txt  blink.c
